Added unit tests for RefereeService, fixed few checkstyle issue